# agentid-kya-solana

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MASTER_BUILD_GUIDE.md  PHASE1_IDENTITY_RUNBOOK.md  PROJECT.md  README.md  SUPPORT.md  TASKS.md  agentid_project_documentation.md.resolved  idea-2-agentid-kya-solana.md  netlify.toml  run_anchor_test.sh  step_by_step_build_guide.md.resolved
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  oracle-sync.yml
backend/: .gitignore  Anchor.toml  build.sh  install-node.sh  install-solana.sh  package.json  run_build.sh  run_test.sh
backend/api/: .env.example  (+7 more)
backend/programs/agentid-program/: Cargo.toml
backend/programs/agentid-program/src/: errors.rs  lib.rs
backend/programs/agentid-program/src/instructions/: init_config.rs  log_action.rs  mod.rs  rate.rs  register.rs  treasury_deposit.rs  treasury_init.rs  treasury_payment.rs  treasury_update.rs  update_capabilities.rs  update_reputation.rs  verify.rs
backend/programs/agentid-program/src/state/: mod.rs
docs/: architecture.md  x402-architecture.md
frontend/: .env.example  .gitignore  README.md  eslint_report.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
scripts/: README.md  demo-devnet.sh  deployment-preflight.mjs  devnet-backend-smoke.mjs  devnet-init.js  devnet-init.mjs  sync-idl.ps1  treasury-smoke.mjs
(+90 files in other folders)
