[package]
name = "agentid-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentid_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
hex = "0.4"
mpl-bubblegum = { version = "2.1.1", features = ["cpi"] }
mpl-token-metadata = { version = "5.1.0", features = ["no-entrypoint"] }
solana-program = "2.3.0"
spl-account-compression = { version = "1.0.0", features = ["cpi"] }
spl-noop = { version = "1.0.0", features = ["no-entrypoint"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
